# gimbal_sim

./: .gitignore  index.html  package-lock.json  package.json  pipeline.dot  pipeline_OLD.dot  vite.config.js
docker/: Dockerfile.deepstream.dev  Dockerfile.dev  build_dev.sh  build_exec.sh  dev.sh
python/: klvdata_test.py  stream.py
python/klvdata/: klvparser.py  setparser.py  streamparser.py
scripts/: build_prod.sh  install.sh  run.sh  tauri_dev.sh
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  gimbal.conf  tauri.conf.json
src-tauri/src/: config.rs  main.rs  utils.rs
src-tauri/src/cmd/: data.rs  mod.rs  stream.rs
src-tauri/src/klv/: MISB601.rs  mod.rs
src/components/: MapContainer.jsx  MissionSelector.jsx  OverlayHUD.jsx  footerControls.jsx
src/components/controls/: ControlsContainer.jsx
src/components/managers/: EventManager.jsx  FlightManager.jsx  GamepadManager.jsx
src/components/routePlanner/: RouteMap.jsx  RoutePlannerContainer.jsx  Toolbar.jsx
src/components/simulator/: MapContainer.jsx  OverlayHUD.jsx  SimulatorContainer.jsx  footerControls.jsx
src/components/simulator/controls/: ControlsContainer.jsx
src/hooks/: useKeyboardShortcuts.js  useWindowResize.js
src/state/main/: getters.js  mainManager.js  methods.js  setters.js  stateSchema.js
src/state/planner/: getters.js  methods.js  plannerManager.js  setters.js  stateSchema.js
src/utils/: gamepad.js  general.js  map.js
